Replaced collapsible section with plain CSS, fixed PDF in the dark mode and added other PDF related fixed to make resume fit one page

--- a/src/components/blog/blog-content-navigation.css
+++ b/src/components/blog/blog-content-navigation.css
@@ -29,6 +29,12 @@ body.dark {
     top: 1rem;
 }
 
+@media (prefers-contrast: high) {
+    .blog-content-nav-wrapper ul.blog-content-nav {
+        color: var(--gray);
+    }
+}
+
 .blog-content-nav-wrapper ul.blog-content-nav:hover {
     color: var(--gray);
 }
